# C_final-project

C_final_project_the_final/: CMakeLists.txt  README.md  main.c
C_final_project_the_final/Screens/MainScreen/: MainScreen.c  MainScreen.h
C_final_project_the_final/sqlite/daily/: daily.c  daily.h
C_final_project_the_final/sqlite/weekly/: weekly.c  weekly.h
C_final_project_the_final/src/MainScreen/: MainScreen.css  MainScreen.ui
